# games102

./: texture.frag
cgaltest/: CMakeLists.txt
cgaltest/src/: cgal_test.cpp  cgal_test.h  main.cpp
h6h7h8h9opengl/: CMakeLists.txt  main.cpp
h6h7h8h9opengl/cvtimagewidget/: cvt_imageglwidget.h
h6h7h8h9opengl/cvtimagewidget/shaders/: cvt_point.vert
h6h7h8h9opengl/cvtwidget/: cvtglwidget.cpp  cvtglwidget.h
h6h7h8h9opengl/cvtwidget/shaders/: image.frag
h6h7h8h9opengl/glwidget/: glwidget_minimal_surface.cpp  glwidget_parameteration.cpp
h6h7h8h9opengl/glwidget/shaders/: curvature.frag  curvature.vert
h6h7h8h9opengl/tabs/: cvt_tab.h  cvt_weight_tab.h  model_tab.h
h6h7opengl/: CMakeLists.txt  glwidget.h  glwidget_core.cpp  glwidget_curvature.cpp  glwidget_mesh_loader.cpp  glwidget_parameteration.cpp  main.cpp  readme.md  shaders.qrc
h6h7opengl/cvtimagewidget/: cvt_imageglwidget.cpp  cvt_imageglwidget.h
h6h7opengl/cvtimagewidget/shaders/: cvt_point.frag
h6h7opengl/cvtwidget/: cvtglwidget.cpp
h6h7opengl/cvtwidget/shaders/: cvt_background.vert  cvt_voronoi.frag
h6h7opengl/glwidget/: glwidget.h  glwidget_core.cpp  glwidget_curvature.cpp  glwidget_cvt.cpp  glwidget_loop_subdivision.cpp  glwidget_mesh_loader.cpp  glwidget_parameteration.cpp
h6h7opengl/shaders/: blinnphong.frag  loop_subdivision.frag  loop_subdivision.vert  texture.frag  texture.vert  wireframe.frag  wireframe.vert
h6h7opengl/tabs/: cvt_tab.h  cvt_weight_tab.h  parameterization_tab.h
hw1/: CMakeLists.txt  canvaswidget.cpp  mainwindow.cpp  mainwindow.h  readme.md
hw3/: canvaswidget.cpp  canvaswidget.h  main.cpp  mainwindow.cpp  mainwindow.h
hw4/: CMakeLists.txt  canvas.cpp  canvas.h  control_point.h  curve_designer.cpp  curve_designer.h  main.cpp
hw4/.obsolute/: CMakeLists.txt  main.cpp
hw5/: CMakeLists.txt  basecanvaswidget.cpp  basecanvaswidget.h  beziercurvecanvas.cpp  beziercurvecanvas.h  bsplinecanvas.h  cubicsplinecanvas.cpp  cubicsplinecanvas.h  main.cpp  mainwindow.cpp  mainwindow.h  polygoncanvas.cpp
hw6/: CMakeLists.txt  bsplinecanvas.cpp  cubicsplinecanvas.cpp  mainwindow.cpp  mainwindow.h  objmodelcanvas.cpp  objmodelcanvas.h  parametriccurvecanvas.cpp  parametriccurvecanvas.h  polygoncanvas.cpp  polygoncanvas.h
hw6_clear/: CMakeLists.txt  basecanvaswidget.cpp  basecanvaswidget.h  main.cpp  mainwindow.cpp  mainwindow.h  objmodelcanvas.cpp  objmodelcanvas.h
hw6_opengl/: CMakeLists.txt  adjacencygraph.cpp  adjacencygraph.h  glwidget.cpp  glwidget.h  glwidget_core.cpp  glwidget_loop_subdivision.cpp  glwidget_mesh_loader.cpp  glwidget_mesh_simplification.cpp  glwidget_minimal_surface.cpp  glwidget_parameteration.cpp  hmesh.cpp  hmesh.h  main.cpp  mesh_loader.cpp  mesh_simplification.cpp  shaders.qrc
hw6_opengl/shaders/: blinnphong.vert  curvature.frag  curvature.vert  loop_subdivision.frag
testcvt/: CMakeLists.txt  main.cpp
testgl/: CMakeLists.txt  main.cpp  renderwidget.cpp  renderwidget.h
testgl/shaders/: compute.comp  quad.frag  quad.vert
testglcopy/: CMakeLists.txt  glwidget.cpp  glwidget.h  main.cpp
testglcopy/shaders/: blinnphong.frag  wireframe.frag  wireframe.vert
